addressed Aimee's comments (1); corrected typos

--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -123,7 +123,7 @@ knitr::knit_hooks$set(plot = function(x, options) {  # set the new plot hook ...
 
 # Introduction
 
-\noindent The amount of resources an organism is able to access is a strong determinant of its odds of survival and reproduction. Resource limitations can cause individuals to experience a negative energetic balance, which can then result in lower fitness [@hou_cold_2020; @le_bot_fishery_2019], changes to community structure [@haney_tipping_2018; @burson_competition_2018; @riotte-lambert_environmental_2020; @ghislandi_resource_2018], altered physiology [@dai_pra_ground_2022; @rocha_life_2021; @le_bot_fishery_2019; @wessling_seasonal_2018], lower chance of reproduction [@stefanescu_timing_2021; @schmidt_interplay_2020; @le_bot_fishery_2019; @douglas_relative_2014], and even death [@foley_severe_2008; @berger_climate_2018]. Thus, many organisms will adapt their behaviors in response to changes in local resource abundance to ensure their needs are met. Some species may respond to fluctuations in resource abundance by, if possible, switching to other food sources [@steinmetz_effects_2021; @le_bot_fishery_2019], reducing energetic costs by lowering body heat [@schmidt_interplay_2020], or entering hibernation or torpor [@fjelldal_nightly_2021; @mohr_cellular_2020; @boyles_optimal_2020]. However, movement represents one of the most readily available traits that species can adjust, whether this be by modifying their home range [@bista_effect_2022; @bradsworth_using_2022; @lucherini_habitat_1996; @relyea_home_2000; @yu_artificial_2022; @arechavala-lopez_common_2019], migrating [@middleton_green-wave_2018; @geremia_migrating_2019], moving nomadically [@teitelbaum_beyond_2019; @nandintsetseg_variability_2019], or dispersing [framework: @southwood_habitat_1977; amphibians: @cayuela_determinants_2020; birds: @pretorius_movement_2020; @wheat_migrate_2017; mammals: @singh_migration_2012].
+\noindent The amount of resources an organism is able to access is a strong determinant of its odds of survival and reproduction. Resource limitations can cause individuals to experience a negative energetic balance, which can then result in lower fitness [@hou_cold_2020; @le_bot_fishery_2019], altered physiology [@dai_pra_ground_2022; @rocha_life_2021; @le_bot_fishery_2019; @wessling_seasonal_2018], lower chance of reproduction [@stefanescu_timing_2021; @schmidt_interplay_2020; @le_bot_fishery_2019; @douglas_relative_2014], and even death [@foley_severe_2008; @berger_climate_2018], along with changes to community structure [@haney_tipping_2018; @burson_competition_2018; @riotte-lambert_environmental_2020; @ghislandi_resource_2018]. Thus, many organisms will adapt their behaviors in response to changes in local resource abundance to ensure their needs are met. Some species may respond to fluctuations in resource abundance by, if possible, switching to other food sources [@steinmetz_effects_2021; @le_bot_fishery_2019], reducing energetic costs by lowering body heat [@schmidt_interplay_2020], or entering hibernation or torpor [@fjelldal_nightly_2021; @mohr_cellular_2020; @boyles_optimal_2020]. However, movement represents one of the most readily available behaviors that species can adjust, whether this be by modifying their home range [@bista_effect_2022; @bradsworth_using_2022; @lucherini_habitat_1996; @relyea_home_2000; @yu_artificial_2022; @arechavala-lopez_common_2019], migrating [@middleton_green-wave_2018; @geremia_migrating_2019], moving nomadically [@teitelbaum_beyond_2019; @nandintsetseg_variability_2019], or dispersing [framework: @southwood_habitat_1977; amphibians: @cayuela_determinants_2020; birds: @pretorius_movement_2020; @wheat_migrate_2017; mammals: @singh_migration_2012].
 
 The relationship between animal movement and resource abundance has been of interest to biologists for over half a century. @burt_territoriality_1943 considered the search for food as the primary driver for animal movement within an animal's home range. Three decades after, @southwood_habitat_1977 suggested that change in resource abundance is a strong determinant of how animals decide where to live and when to reproduce. Two years later, @harestad_home_1979 proposed that the simplest relationship between resource abundance and an animal's home-range size is
 
@@ -132,9 +132,9 @@ H = C / R,
 (\#eq:harestad-eq)
 \end{equation}
 
-\noindent where $H$ is the animal's **home-range size**, $C$ is the animal's resource consumption, and $R$ is the **resources** an animal can access. Harestad and Bunnel's model is simple to conceptualize and allows for testable predictions, but a species' spatial requirements likely depend on numerous other factors, such as competition, metabolic rate, diet, and body weight [@harvey_primate_1981; @lindstedt_home_1986; @reiss_scaling_1988; @harvey_primate_1981; @gittleman_carnivore_1982; @jetz_scaling_2004; @boratynski_energetic_2020; @noonan_effects_2020]. While many researchers have since demonstrated that animals adapt their home ranges in response to resources abundance, few studies build upon others' previous work. Instead, results are reported as independent, *de-novo* findings. Consequently, we currently lack a unifying framework for quantifying the effects of resource abundance on animals' spatial needs. In addition, while much work has been done on estimating animals' responses to average resource abundance, there is little to no information on how they respond to unpredictable changes in resources.
+\noindent where $H$ is the animal's **home-range size**, $C$ is the animal's resource consumption, and $R$ is the **resources** the animal can access. Harestad and Bunnel's model is simple to conceptualize and allows for testable predictions, but a species' spatial requirements likely depend on numerous other factors, such as competition, metabolic rate, diet, and body weight [@harvey_primate_1981; @lindstedt_home_1986; @reiss_scaling_1988; @harvey_primate_1981; @gittleman_carnivore_1982; @jetz_scaling_2004; @boratynski_energetic_2020; @noonan_effects_2020]. While many researchers have since demonstrated that animals adapt their home ranges in response to resources abundance, few studies build upon others' previous work. Instead, results are reported as independent, novel findings. Consequently, we currently lack a unifying framework for quantifying the effects of resource abundance on animals' spatial needs. In addition, while much work has been done on estimating animals' responses to average resource abundance, there is little information on how they respond to unpredictable changes in resources.
 
-In this paper, we refer to a location's average amount of resources as **resource abundance**, while we use the phrase **resource stochasticity** to indicate the variability in resource abundance due to unpredictable causes. We argue that, on its own, a habitat's long-term resource abundance is not sufficient to assess the habitat's quality, nor make predictions about how much space an animal might use. For instance, a grassland with relatively low but constant forage availability will clearly require drastically different behaviors and adaptations from a desert location with equally scarce forage but rare, sudden, and strong pulses of resources. In the first scenario, an animal may require a large but constant home range as it moves between locations in search of food [*sensu* @teitelbaum_beyond_2019], while an animal in the second scenario may switch between dispersal as it searches for high-resource patches and short-term range residency until the local resources are depleted. Although it may be possible for both habitats to have the same long-term average resource abundance, the differences in resource unpredictability result in substantially different movement strategies and life histories being selected for. Although it is generally expected that resource unpredictability will decrease animals' fitness and a landscape's energetic balance [@chevin_adaptation_2010], there is little empirical evidence to support this hypothesis [but see: @herfindal_prey_2005; @nilsen_can_2005; @rizzuto_forage_2021].
+In this paper, we refer to a location's average amount of resources as **resource abundance**, while we use the phrase **resource stochasticity** to indicate the variability in resource abundance due to unpredictable causes. We argue that, on its own, a habitat's long-term resource abundance is not sufficient to assess the habitat's quality, nor make predictions about how much space an animal might use. For instance, a grassland with relatively low but constant forage availability will require drastically different behaviors and adaptations from a desert location with equally scarce forage but rare, sudden, and strong pulses of resources. In the grassland, an animal may require a large but constant home range as it moves between locations in search of food [*sensu* @teitelbaum_beyond_2019], while an animal in the desert may switch between dispersal as it searches for high-resource patches and short-term range residency until the local resources are depleted. Although it may be possible for both habitats to have the same long-term average resource abundance, the differences in resource unpredictability result in substantially different movement and life history strategies being selected for. Although it is generally expected that resource unpredictability will decrease animals' fitness and a landscape's energetic balance [@chevin_adaptation_2010], there is little empirical evidence to support this hypothesis [but see: @herfindal_prey_2005; @nilsen_can_2005; @rizzuto_forage_2021].
 
 Here, we illustrate how animals' spatial needs depend on both the abundance and unpredictability of resources. First, we set the theoretical background necessary for the successive sections by introducing key concepts and notation. Next, we provide a review of the effects of resource *abundance* on animals' spatial needs while suggesting a unifying hypothesis. Afterwards, we provide a review of the effects of resource *stochasticity* on animals' spatial needs while suggesting a second unifying hypothesis. Subsequently, we demonstrate the power of these two hypotheses using quantitative, simulated responses to changes in resource abundance and unpredictability. Finally, we demonstrate how this framework can be used in practice to describe the movement ecology of a lowland tapir (*Tapirus terrestris*) from the Brazilian Cerrado [@medici_movement_2022]. Results from the simulations and empirical example are presented using a fully transparent approach that allows researchers to replicate the work and apply the methods to their own tracking data.
 
@@ -144,13 +144,13 @@ Here, we illustrate how animals' spatial needs depend on both the abundance and 
 
 ## Resources as a random variable
 
-\noindent In statistics, **random variables** indicate random (i.e., unknown) quantities and are indicated with capital letters (e.g., $R$). Known values, such as realizations of random variables (i.e., known observations or instances), are indicated with lower-case letters (e.g., $r$). Using this notation, we can write the statement "the probability of random variable $R$ taking the value $r$" as $P(R = r)$. Resource abundance is often unpredictable (and hard to quantify), since it depends on a variety of factors which cannot be accounted for easily, including climate [@lindstedt_seasonality_1985; @schmidt_interplay_2020; @morellet_seasonality_2013], weather [@fjelldal_nightly_2021; @morellet_seasonality_2013], competitive pressure [@torrez-herrera_monkeys_2020; @rich_anthropogenic_2012], and differents in energetics at the individual [@schmidt_interplay_2020] and species level [@jetz_scaling_2004]. Thus, we can let the random variable $R$ indicate the resource abundance at a given point in space and time. Quantifying resources as a numerical random variable, as opposed to using *ad hoc* qualitative descriptions, provides us with the capacity to leverage techniques from probability theory and statistics.
+\noindent In statistics, **random variables** indicate random (i.e., unknown) quantities and are indicated with capital letters (e.g., $R$). Known values, such as realizations of random variables (i.e., known observations or instances), are indicated with lower-case letters (e.g., $r$). Using this notation, we can write the statement "the probability of random variable $R$ taking the value $r$" as $P(R = r)$. Resource abundance is often unpredictable (and difficult to quantify), since it depends on various factors which cannot be accounted for easily, including climate [@lindstedt_seasonality_1985; @schmidt_interplay_2020; @morellet_seasonality_2013], weather [@fjelldal_nightly_2021; @morellet_seasonality_2013], competitive pressure [@torrez-herrera_monkeys_2020; @rich_anthropogenic_2012], and differences in energetics at the individual [@schmidt_interplay_2020] and species level [@jetz_scaling_2004]. Thus, we can let the random variable $R$ indicate the resource abundance at a given point in space and time. Quantifying resources as a numerical random variable, as opposed to using *ad hoc* qualitative descriptions, provides us with the capacity to leverage techniques from probability theory and statistics.
 
 ### Probability distributions
 
-\noindent Random variables are defined by specifying the **distribution** the variable is assumed to follow (e.g., Gaussian, Gamma, Poisson, Beroulli). Since the variable is random, it can take multiple possible values, each with different probabilities. The set or range of values which have non-zero probabilities in a distribution is referred to as the distribution's **support**.
+\noindent Random variables are defined by specifying the **distribution** the variable is assumed to follow (e.g., Gaussian, Gamma, Poisson, Bernoulli). Since the variable is random, it can take multiple possible values, each with different probabilities. The set or range of values which have non-zero probabilities in a distribution is referred to as the distribution's **support**.
 
-There are many distributions we can assign to $R$, depending on how we quantify it. For instance, if $R$ is the number of calories an animal is able to access from food in a given location, we can let $R$ follow a distribution with support over all real numbers between 0 and infinity, which we can indicate with $R \in (0, \infty)$,^[We use round parentheses rather than square brackets (i.e., $[0, \infty]$) because neither 0 nor infinity are included in the distribution's support set.] such as a Gamma or log-normal distribution. If $R$ is a discrete integer variable, such as the number of prey in a location during a period of time, we can use a Poisson or negative binomial distribution. Alternatively, if we measure $R$ using the Normalized Difference Vegetation Index [**NDVI**, see @pettorelli_normalized_2011], we should use a distribution with support over the interval $[-1, 1]$, since NDVI can only take on values between -1 and 1 (extremes included). However, since there is no commonly used distribution with that support, the best option is to rescale NDVI to (0, 1) and use a beta distribution (see the section below on applying this framework).
+There are many distributions we can assign to $R$ depending on how we quantify it. For instance, if we measure $R$ using the Normalized Difference Vegetation Index [**NDVI**, see @pettorelli_normalized_2011], we should use a distribution with support over the interval $[-1, 1]$, since NDVI can only take on values between -1 and 1 (extremes included). However, there is no commonly used distribution with that support, so the best option is to rescale NDVI to (0, 1) and use a beta distribution (see the section below on applying this framework). Alternatively, if $R$ is the number of calories an animal is able to access from food in a given location, we can let $R$ follow a distribution with support positive real numbers, such as a Gamma or log-normal distribution. If $R$ is a discrete integer variable, such as the number of prey in a location during a period of time, we can use a Poisson or negative binomial distribution.
 
 ### Expected resource abundance, $\e(R)$
 
@@ -226,7 +226,7 @@ plot(1:10, qgamma2(p = 0.5, mu = 1, sigma2 = 1:10))
 knitr::include_graphics('../figures/habitat-examples-changing-variance.png')
 ```
 
-Similar to the effect of $\e(R)$, we expect $\var(R)$ to have a nonlinear effect on animals' spatial needs. When $\var(R)$ is low enough that $R$ is relatively predictable, we do not expect changes in $\var(R)$ to have a noticeable effect, but as resources become increasingly unpredictable, we expect spatial needs to increase progressively faster (figure \@ref(fig:s2-hyp)) because: (1) as $\var(R)$ increases the chances of finding low $R$ increase superlinearly, (2) stochastic environments tend to be less productive [@chevin_adaptation_2010], and (3) the added movement required to search for food increases animals' energetic requirements. If resources remain highly unpredictable over long periods of time (e.g., multiple lifespans), animals may evolve or develop new behaviors (such as nomadism, dispersal, and migration) or adaptations (such as increased fat storage or food caching). If changes in $\sigma^2(t)$ are sufficiently predictable, animals may learn to anticipate and prepare for periods of greater stochasticity by pre-emptively caching food or migrating, or relying on alternative food sources during stochastic events (e.g., after the arrival of competitors).
+Similar to the effect of $\e(R)$, we expect $\var(R)$ to have a nonlinear effect on animals' spatial needs. When $\var(R)$ is low enough that $R$ is relatively predictable, we do not expect changes in $\var(R)$ to have a noticeable effect, but as resources become increasingly unpredictable, we expect spatial needs to increase progressively faster (figure \@ref(fig:s2-hyp)) because: (1) as $\var(R)$ increases the chances of finding low $R$ increase superlinearly, (2) stochastic environments tend to be less productive [@chevin_adaptation_2010], and (3) the added movement required to search for food increases animals' energetic requirements. If resources remain highly unpredictable over long periods of time (e.g., multiple lifespans), animals may evolve or develop new behaviors (such as nomadism, dispersal, and migration) or adaptations (such as increased fat storage or food caching). If changes in $\sigma^2(t)$ are sufficiently predictable, animals may learn to anticipate and prepare for periods of greater stochasticity by pre-preemptively caching food or migrating, or relying on alternative food sources during stochastic events (e.g., after the arrival of competitors).
 
 Like the scenario illustrated in figure \@ref(fig:multipanel-constant-var), we can imagine an environment where both $\e(R)$ and $\var(R)$ change over time. We can then define $\var(R)$ as a function of time using the same notation as we did for $\e(R)$, i.e., $\var(R | t) = \sigma^2(t)$ (figure \@ref(fig:multipanel-changing-var)). When both $\e(R)$ and $\var(R)$ change over time, predicting $R$ becomes more complex. Statistically, this is because $\sigma^2(t)$ decreases as we allow $\mu(t)$ to change more over time and explain a greater proportion of $\var(R)$. Biologically, this is important because some animals may perceive changes in $R$ as a change in $\e(R)$, while others may perceive the change as a stochastic event. An animal's perception of changes in $R$ will depend strongly on the animal's cognitive capacities, including its memory and lifespan [@mueller_social_2013; @abrahms_memory_2019; @foley_severe_2008; @falcon-cortes_hierarchical_2021; @fagan_spatial_2013]. The ability to predict trends in $\mu(t)$ and $\sigma^2(t)$ requires animals have high cognitive capacity, since distinguishing between changes in $\e(R)$ and $\var (R)$ is not easy [@steixner-kumar_strategies_2020], especially if $\e(R)$ and $\var(R)$ are not independent, as in the case of $R \sim \Gamma(\mu(t), \sigma^2(t))$. Regardless of whether an organism is capable of predicting changes in $\sigma^2(t)$, the effect of $\var(R)$ is arguably as important as the effect of $\e(R)$ in determining how said organism will respond to changes in $R$ and consequently adapt its space use.
 
@@ -256,7 +256,7 @@ The remaining panels in figure \@ref(fig:5-5-sims) illustrate how the effect of 
 
 Not all 25 scenarios depicted in figure \@ref(fig:5-5-sims) may be realistic, but the trends in $\e(R)$ and $\var(R)$, and their impacts on animal space use are useful examples that can be thought of as simplified scenarios. $\e(R)$ and $\var(R)$ may be assumed to be (approximately) constant in highly homogeneous environments. Although it is impossible for $\mu(t)$ and $\sigma^2(t)$ to increase linearly forever, these examples are useful to demonstrate that linear changes in $\mu(t)$ and $\sigma^2(t)$ affect $H$ nonlinearly. Cyclical oscillations in $\e(R)$ and $\var(R)$ may occur in urban environments as human activity changes within and between days [@peron_periodic_2017; @ikeda_home_2022] and as temperatures fluctuate daily and seasonally [@geremia_migrating_2019; @alston_temperature_2020], while $\e(R)$ and $\var(R)$ may drift randomly in highly complex environments which are too hard to predict. Finally, erratic changes in $\e(R)$ and $\var(R)$ may occur in environments where changes are very sudden, such as areas prone to fires or floods, as well as habitats with drastic human alteration (e.g., a forest which is clear-cut with a subsequent artificial re-forestation). However, if stochastic changes are sufficiently small and frequent, animals may perceive them as continuous and smooth changes rather a series of small and sudden changes.
 
-Although the temporal trends in figure \@ref(fig:5-5-sims) are complex and the effects of $\e(R)$ and $\var(R)$ can be hard to disentangle, two surprisingly simple relationships emerge when home-range size is shown as a function of either $\e(R)$ or $\var(R)$, rather than time. Both $\e(R)$ and $\var(R)$ affect spatial needs precisely as we hypothesized (figure \@ref(fig:5-5-reg)).<!--, although we found that the effect of $\var(R)$ is closer linear than we expected (it is mostly sub-linear as long as $H$ is sufficiently far from zero). We ensured this was not due to a low maximum $\var(R)$ (as in the left-hand side of figure \@ref(fig:s2-hyp)) by simulating within the range $\sigma^2(t) \in [2\,500, 250\,000] \implies \sigma \in [50, 500]$, since the range of $\e(R)$ was $\mu(t) \in [100, 200]$.--> We believe the approximately linear effect of $\var(R)$ on $H$ is mainly due to two factors. Firstly, $H$ scales superlinearly with the standard diviation in $R$ (as $\sqrt{\var(R)}$ is on the same scale as $\e(R)$; not shown), which would necessarily imply that $H$ increases *sub*linearly with $\var(R)$. Secondly, the animal's movement was simulated to be range resident within an homogeneous environment. Since real-world landscapes are spatially heterogeneous in both $\e(R)$ and $\var(R)$, animals may choose to shift their home range to a new area following a stochastic event that caused $\mu(t)$ to decrease, such as a fire or a flood. Thus, we hypothesize that our simulations may be underestimating animals' responses to spatiotemporal changes in $\e(R)$ and $\var(R)$, since the simulated animals cannot select for areas of higher $\e(R)$ or lower $\var(R)$. Additionally, the simulations also ignore how competition, movement costs, predation, and other factors may affect the effects of $\e(R)$ and $\var(R)$ on $H$. While these are definitely important effects that should be accounted for [@jetz_scaling_2004], doing so was beyond the scope of this paper.
+Although the temporal trends in figure \@ref(fig:5-5-sims) are complex and the effects of $\e(R)$ and $\var(R)$ can be hard to disentangle, two surprisingly simple relationships emerge when home-range size is shown as a function of either $\e(R)$ or $\var(R)$, rather than time. Both $\e(R)$ and $\var(R)$ affect spatial needs precisely as we hypothesized (figure \@ref(fig:5-5-reg)).<!--, although we found that the effect of $\var(R)$ is closer linear than we expected (it is mostly sub-linear as long as $H$ is sufficiently far from zero). We ensured this was not due to a low maximum $\var(R)$ (as in the left-hand side of figure \@ref(fig:s2-hyp)) by simulating within the range $\sigma^2(t) \in [2\,500, 250\,000] \implies \sigma \in [50, 500]$, since the range of $\e(R)$ was $\mu(t) \in [100, 200]$.--> We believe the approximately linear effect of $\var(R)$ on $H$ is mainly due to two factors. Firstly, $H$ scales superlinearly with the standard deviation in $R$ (as $\sqrt{\var(R)}$ is on the same scale as $\e(R)$; not shown), which would necessarily imply that $H$ increases *sub*linearly with $\var(R)$. Secondly, the animal's movement was simulated to be range resident within an homogeneous environment. Since real-world landscapes are spatially heterogeneous in both $\e(R)$ and $\var(R)$, animals may choose to shift their home range to a new area following a stochastic event that caused $\mu(t)$ to decrease, such as a fire or a flood. Thus, we hypothesize that our simulations may be underestimating animals' responses to spatiotemporal changes in $\e(R)$ and $\var(R)$, since the simulated animals cannot select for areas of higher $\e(R)$ or lower $\var(R)$. Additionally, the simulations also ignore how competition, movement costs, predation, and other factors may affect the effects of $\e(R)$ and $\var(R)$ on $H$. While these are definitely important effects that should be accounted for [@jetz_scaling_2004], doing so was beyond the scope of this paper.
 
 ```{r 5-5-reg, eval=TRUE, echo=FALSE, fig.cap="Effects of $\\e(R)$ and $\\var(R)$ on simulated spatial requirements. The relationships were estimated using a Generalized Additive Model for Location and Scale (Rigby and Stasinopoulos 2005; Stasinopoulos and Rigby 2007) with a Gamma family of distributions. The model accounted for the effects of $\\e(R)$ and $\\var(R)$ and the interaction effects between the two on both $\\e(H)$ and $\\var(H)$. Note the nonlinear decrease in $H$ as $\\e(R)$ increases and the increase in $H$ as $\\var(R)$ increases. Additionally, note how the variance in spatial needs increases with mean spatial needs.", out.width='100%'}
 knitr::include_graphics('../figures/simulation-regression-plots.png')
@@ -397,15 +397,19 @@ A population's fitness and chances of survival in a changing environment depend 
 
 \noindent Technical advancements from the last few decades have allowed scientists to collect increasingly larger amounts of data at finer and finer scales [@nathan_big-data_2022], but little attention has been paid to estimating the effects of environmental stochasticity on animal behavior. In these times of great change and climatic uncertainty [@intergovernmental_panel_on_climate_change_climate_2023; @abrahms_human-wildlife_2021], it is increasingly important to recognize how environmental stochasticity affects animal behavior and shapes ecosystems. Accounting for changes in both resource abundance and resource stochasticity is crucial when assessing whether the quality of protected areas is sufficiently high to sustain biodiversity long term. Protecting areas with high resource abundance and low resource stochasticity will reduce animal's spatial requirements.
 
-The designation of high-quality habitats is a central concern of many conservation initiatives. This framework allows consultants and conservation managers to quantify the quality of a habitat based on its resource abundance and stochasticity as well as the amount of space animals would need in the habitat. With the methods presented in this paper, one can (1) assess the quality of current protected areas, (2) predict whether or not the areas will be able to sustain current populations in future decades, and (3) evaluate the quality of new potential conservation areas. In light of the UN's objctive to conserve 30% of global landmasses and waters by 2030 [@ipbes_global_2019], the framework and methods presented here provide useful metrics for evaluating whether protected areas will have sufficient quality and long-term stability to support species under various possible climate change scenarios [@intergovernmental_panel_on_climate_change_climate_2023].
+The designation of high-quality habitats is a central concern of many conservation initiatives. This framework allows consultants and conservation managers to quantify the quality of a habitat based on its resource abundance and stochasticity as well as the amount of space animals would need in the habitat. With the methods presented in this paper, one can (1) assess the quality of current protected areas, (2) predict whether or not the areas will be able to sustain current populations in future decades, and (3) evaluate the quality of new potential conservation areas. In light of the UN's objective to conserve 30% of global landmasses and waters by 2030 [@ipbes_global_2019], the framework and methods presented here provide useful metrics for evaluating whether protected areas will have sufficient quality and long-term stability to support species under various possible climate change scenarios [@intergovernmental_panel_on_climate_change_climate_2023].
 
 Ignoring the effects of recent and predicted increases in $\var(R)$, including an increase in the intensity and frequency of extreme events [@yao_emergence_2022; @intergovernmental_panel_on_climate_change_climate_2023], has the potential to greatly hinder future conservation efforts. Since not accounting for an increase in $\sigma^2(t)$ will result in an under-estimation of animals' spatial needs, protected areas which were designated based on the area's $\mu(t)$ but not $\sigma^2(t)$ will likely be insufficient in both size and resources in the future, which may lead to decreases in the fitness and size of a population while also increasing the risk of population collapse and human-wildlife conflict [@mukeka_human-wildlife_2019]. This is particularly the case in resource-poor, stochastic regions, where animals are forced to endure longer and more unpredictable searches, which results in a larger variance in spatial needs.
 
-It is also worth noting that carnivores may be more susceptible to changes in $\e(R)$ and $\var(R)$, and that this susceptibility is likely amplified further at higher trophic levels. While primary consumers can rely on relatively predictable and static resources that can be estimated easily via remote sensing measures such as NDVI, the  fine-scale location of secondary consumers' resources may not correlate as strongly with measures of habitat productivity. In fact, primary consumers' ability to move makes their location and abundance more stochastic than those of plants. Consequently, the abundance of primary consumers may correlate with productivity weakly or at a temporal lag [e.g., @geremia_migrating_2019]. Thus, primary consumers' delayed responses to fluctuations in $\e(R)$ and $\var(R)$ may result in an increase in secondary consumers' resource stochasticity, which would also be perceived with a delay. Similar hypotheses can be formulated for higher trophic levels but with amplified temporal lags, since each trophic level adds another layer of uncertainty and delayed response, which together increase the unpredictability on how carnivores indirectly respond to changes in primary productivity. However, the effect is likely less pronounced for omnivores and other diet generalists, as they may have the ability to switch to more abundant and less sotchastic resources.
+It is also worth noting that carnivores may be more susceptible to changes in $\e(R)$ and $\var(R)$, and that this susceptibility is likely amplified further at higher trophic levels. While primary consumers can rely on relatively predictable and static resources that can be estimated easily via remote sensing measures such as NDVI, the  fine-scale location of secondary consumers' resources may not correlate as strongly with measures of habitat productivity. In fact, primary consumers' ability to move makes their location and abundance more stochastic than those of plants. Consequently, the abundance of primary consumers may correlate with productivity weakly or at a temporal lag [e.g., @geremia_migrating_2019]. Thus, primary consumers' delayed responses to fluctuations in $\e(R)$ and $\var(R)$ may result in an increase in secondary consumers' resource stochasticity, which would also be perceived with a delay. Similar hypotheses can be formulated for higher trophic levels but with amplified temporal lags, since each trophic level adds another layer of uncertainty and delayed response, which together increase the unpredictability on how carnivores indirectly respond to changes in primary productivity. However, the effect is likely less pronounced for omnivores and other diet generalists, as they may have the ability to switch to more abundant and less stochastic resources.
 
 # Conclusion
 
 \noindent The work presented here provides a unifying framework for viewing animal movement as a function of resource abundance and stochasticity. We provide realistic and flexible hypotheses of the effects of $\e(R)$ and $\var(R)$ on animals' spatial needs and movement behavior. We demonstrate that animals' spatial needs respond nonlinearly to both resource abundance and stochasticity, and we demonstrate the importance of accounting for $\var(R)$ besides $\e(R)$. We also provide a moving window approach that allows one to model animal movement continuously rather than imposing arbitrary thresholds between different periods or types of behaviors, including temporal changes in spatial needs and shifts between range-residency and nomadism. The methods presented here can be applied to assess the current and future quality of protected areas while also estimating the amount of space animals currently need and will need in the future under different climate change scenarios.
+
+# Acknowledgements
+
+We would like to thank all those who provided feedback on all posters, presentation, and writings related to this project. In particular, we thank all those who provided feedback on the manuscript despite not being authors, namely: Aimee Chhen, Lauren Mills, and Sarah Wyse.
 
 \newpage
 
